Updated to 0.1-alpha. Checked with PVS-Studio.